# wildchess

./: .dockerignore  .gitignore  Cargo.toml  DIRECTORY.md  Dockerfile.server  Makefile.toml  README.md  TODO.md  Trunk.toml  deno.json  fly.toml
.github/workflows/: deploy.staging.yml  deploy.yml
app/lib/: Cargo.toml
app/lib/src/: home_ui.rs  lib.rs
app/native/: Cargo.toml
app/server/: Cargo.toml
app/server/src/: main.rs
app/wasm/: Cargo.toml
app/wasm/src/: lib.rs
app/web/: .gitignore  Cargo.toml  deno.json  fresh.gen.ts
app/web/components/: AboutBlurb.tsx  Page.tsx
app/web/e2e/: playwright.config.ts
app/web/e2e/tests/: emulate-player.spec.ts
app/web/game/: useWasmGame.ts
app/web/islands/: Board.tsx  Game.tsx  GameManager.tsx  GameSidebar.tsx  Lobby.tsx  PromotionPieces.tsx
app/web/routes/: chess.tsx  index.tsx  token.tsx
app/web/src/: lib.rs
app/web/static/js/workers/: wasm.js
apps/leptos/: Cargo.toml  index.html  style.css
apps/leptos/src/: lib.rs  worker.rs
apps/native/: Cargo.toml
apps/native/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/wasm/: Cargo.toml
apps/web/: Cargo.toml  README.md
apps/web/components/: Clock.tsx
apps/web/e2e/: .gitignore  package.json
apps/web/e2e/tests/: emulate-player.spec.ts
apps/web/game/: useWasmGame.ts
apps/web/islands/: Board.tsx  GameManager.tsx  GameSidebar.tsx  PromotionPieces.tsx
apps/web/routes/: _app.tsx  index.tsx
apps/web/src/: lib.rs
apps/web/static/js/workers/: wasm.js
bevy_replicon_renet2/: Cargo.toml
bevy_replicon_renet2/src/: lib.rs
board/: Cargo.toml
board/src/: actions.rs  lib.rs  orientation.rs  step.rs
boards/: Cargo.toml
boards/classical/: Cargo.toml
boards/src/: lib.rs  plugin.rs  utils.rs
boards/wild/: Cargo.toml
checkerboard/: Cargo.toml
checkerboard/src/: lib.rs  square.rs  symmetry.rs
chess/: Cargo.toml
chess/src/: actions.rs  board.rs  lib.rs  square.rs  team.rs
chess/src/behavior/: caches.rs  capture_surrounded.rs  castling.rs  en_passant.rs  mimic.rs  mod.rs  pattern.rs  plugin.rs  relay.rs
chess/src/behavior/kinds/: castling.rs  en_passant.rs  mimic.rs  mirror.rs  mod.rs  pattern.rs  relay.rs  rotation.rs
chess/src/board/: board.rs  mod.rs  square.rs
chess/src/pattern/: capture.rs  mod.rs  scanner.rs  step.rs  targets.rs
chess/src/pieces/: actions.rs  behavior.rs  identity.rs  mod.rs  mutation.rs  orientation.rs  position.rs  promotable.rs  royal.rs  targets.rs
chess/src/pieces/behavior/: en_passant.rs  mimic.rs  mod.rs  pattern.rs  relay.rs  rotation.rs
chess/src/pieces/pattern/: mod.rs  scanner.rs
chess1/: Cargo.toml
game/: Cargo.toml
game/e2e/: classical.rs  sampling.rs  wild.rs
game/src/: behavior.rs  events.rs  lib.rs  moves.rs  square.rs  team.rs  vision.rs
game/src/board/: king.rs  mod.rs  pawn.rs  piece.rs
game/src/components/: behavior.rs  board.rs  mod.rs  position.rs  promotable.rs  targets.rs  team.rs
game/src/components/pieces/: behavior.rs  king.rs  mod.rs  pawn.rs  piece.rs  promotable.rs
game/src/components/pieces/kind/: king.rs  mod.rs  pawn.rs
game/src/components/player/: clock.rs  mod.rs  turn.rs
game/src/gameplay/: board.rs  capture.rs  mod.rs  movement.rs  targets.rs
game/src/pieces/: king.rs  mod.rs  pawn.rs  piece.rs  promotion.rs
game/src/plugins/: mod.rs  systems.rs  ui.rs
game/src/plugins/board/: mod.rs
game/src/plugins/board/settings/: mod.rs  wild.rs
game/src/plugins/gameplay/: mod.rs  targets.rs  turns.rs
gameboard/: Cargo.toml
gameplay/: Cargo.toml
gameplay/e2e/: classical.rs  knight_relay.rs  super_relay.rs  wild.rs
gameplay/src/: events.rs  lib.rs
gameplay/src/components/: player.rs
gameplay/src/plugin/: capture.rs  mod.rs  systems.rs  targets.rs  turns.rs
games/: Cargo.toml
games/e2e/: classical.rs  clocks.rs  knight_relay.rs  super_relay.rs  wild.rs
games/src/: events.rs  lib.rs
games/src/components/: clock.rs  game.rs  mod.rs  turn.rs  turns.rs
games/src/components/game/: mod.rs
games/src/components/player/: clock.rs  mod.rs
games/src/gameplay/: clock.rs  mod.rs
games/src/gameplay/components/: clock.rs  game.rs  mod.rs  turns.rs
games/src/gameplay/plugin/: events.rs  mod.rs  systems.rs
games/src/matchmaking/: components.rs  mod.rs  systems.rs
games/src/plugin/: events.rs  mod.rs  systems.rs
icons/: Cargo.toml
icons/src/: lib.rs  (+2 more)
layouts/: Cargo.toml
networking/: Cargo.toml
plugins/bevy-replicon-renet2/: Cargo.toml
plugins/chess/: Cargo.toml
plugins/chess/src/: actions.rs  lib.rs  team.rs
plugins/chess/src/behavior/: caches.rs  mod.rs  plugin.rs
plugins/chess/src/behavior/kinds/: castling.rs  en_passant.rs  mod.rs  pattern.rs  relay.rs
plugins/chess/src/board/: mod.rs  square.rs
plugins/chess/src/pattern/: capture.rs  mod.rs  scanner.rs  step.rs  targets.rs
plugins/chess/src/pieces/: identity.rs  mod.rs  mutation.rs  orientation.rs  position.rs  royal.rs
plugins/egui-chessboard/: Cargo.toml
plugins/egui-chessboard/src/: board_ui.rs  home_ui.rs  mutation.rs  query.rs
plugins/egui-chessboard/src/widgets/: board.rs  clock.rs  piece_inspector.rs
plugins/games/: Cargo.toml
plugins/games/src/: lib.rs
plugins/games/src/gameplay/: clock.rs
plugins/games/src/gameplay/components/: game.rs  mod.rs  turns.rs
plugins/games/src/gameplay/plugin/: events.rs  mod.rs  systems.rs  turns.rs
plugins/games/src/matchmaking/: components.rs  mod.rs  systems.rs
plugins/replication/: Cargo.toml  README.md
plugins/replication/src/: client.rs  lib.rs  server.rs
plugins/transport/: Cargo.toml
plugins/transport/src/: client.rs  lib.rs  server.rs
replication/: Cargo.toml  README.md
replication/src/: lib.rs
src/: lib.rs
transport/: Cargo.toml
transport/src/: bevy_replicon_renet2.rs  client.rs  lib.rs  server.rs
ui/: Cargo.toml
ui/src/: board_ui.rs  home_ui.rs  icons.rs  lib.rs  mutation.rs  promotion.rs  query.rs  ui.rs
ui/src/egui/: clock.rs  mod.rs  square.rs
ui/src/icons/: classical.rs  mod.rs  wild.rs
ui/src/widgets/: clock.rs  mod.rs  piece_inspector.rs  square.rs
(+78 files in other folders)
