[workspace]
resolver = "2"
members = ["apps/*", "plugins/*"]

[profile.release]
lto = true
opt-level = "z"

[workspace.dependencies]
# plugins
chess = { path = "plugins/chess" }
games = { path = "plugins/games" }
wild_icons = { path = "plugins/wild-icons" }
layouts = { path = "plugins/layouts" }
replication = { path = "plugins/replication" }
transport = { path = "plugins/transport" }
egui_chessboard = { path = "plugins/egui-chessboard" }

# bevy
bevy = { version = "0.14", default-features = false }
bevy_app = { version = "0.14" }
bevy_core = { version = "0.14" }
bevy_ecs = { version = "0.14" }
bevy_log = { version = "0.14" }
bevy_math = { version = "0.14" }
bevy_reflect = { version = "0.14" }
bevy_time = { version = "0.14" }
bevy_utils = { version = "0.14" }
bevy_renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "0.0.5" }
renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "0.0.5", default-features = false, features = [
    "bevy",
    "serde",
] }
bevy_replicon = { version = "0.27" }
bevy_replicon_renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "0.0.5" }

# stdx
anyhow = { version = "1.0" }
bitflags = { version = "2.4" }
itertools = { version = "0.12" }
rand = { version = "0.8.5" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
