[package]
name = "bevy_replicon_renet2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.13" }
bevy_ecs = { version = "0.13" }
bevy_renet2 = { git = "https://github.com/UkoeHB/renet2" }
renet2 = { git = "https://github.com/UkoeHB/renet2", default-features = false, features = [
    "bevy",
    "serde",
] }
bevy_replicon = { version = "0.24" }
