[package]
name = "checkerboard"
version = "0.1.0"
edition = "2021"

[dependencies]
fairy_gameboard = { path = "../gameboard" }
bevy = { version = "0.12" }
anyhow = { version = "1.0" }
enumflags2 = { version = "0.7" }
thiserror = { version = "1.0" }
itertools = { version = "0.12" }
derive_more = { version = "0.99" }
