[package]
name = "wildchess_game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bevy = "0.11"
rand = "0.8.5"
thiserror = "1.0"
bevy_egui = { version = "0.21" }

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }

[[test]]
name = "e2e-classical"
path = "e2e/classical.rs"
harness = false

[[test]]
name = "e2e-sampling"
path = "e2e/sampling.rs"
harness = false

[[test]]
name = "e2e-wild"
path = "e2e/wild.rs"
harness = false
