[package]
name = "wildchess_game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
bevy = { version = "0.11" }
rand = { version = "0.8.5 " }
thiserror = { version = "1.0" }
itertools = { version = "0.11" }

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }
wildchess_ui = { path = "../ui" }

[[test]]
name = "e2e-classical"
path = "e2e/classical.rs"
harness = false

[[test]]
name = "e2e-wild"
path = "e2e/wild.rs"
harness = false
