[package]
name = "chess_gameplay"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../chess" }
wild_board = { path = "../boards/wild" }
bevy = { version = "0.11" }

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }
wildchess_ui = { path = "../ui" }

[[test]]
name = "e2e-classical"
path = "e2e/classical.rs"
harness = false

[[test]]
name = "e2e-wild"
path = "e2e/wild.rs"
harness = false
