[package]
name = "chess_gameplay"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../chess" }
chess_boards = { path = "../boards" }
bevy = { version = "0.11" }

[dev-dependencies]
chess_boards = { path = "../boards" }
wildchess_ui = { path = "../ui" }
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }

[[test]]
name = "e2e-classical"
path = "e2e/classical.rs"
harness = false

[[test]]
name = "e2e-wild"
path = "e2e/wild.rs"
harness = false
