[package]
name = "games"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../chess", default-features = false }
layouts = { path = "../layouts" }
bevy_app = { version = "0.13" }
bevy_core = { version = "0.13" }
bevy_ecs = { version = "0.13" }
bevy_log = { version = "0.13", optional = true }
bevy_reflect = { version = "0.13", optional = true }
bevy_time = { version = "0.13" }

[features]
default = []
reflect = ["dep:bevy_reflect", "chess/reflect"]
log = ["dep:bevy_log", "chess/log"]

[dev-dependencies]
layouts = { path = "../layouts" }
