[package]
name = "replication"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = ["dep:bevy_log"]

[dependencies]
transport = { path = "../transport" }
serde = { version = "1.0" }
bevy_app = { version = "0.13" }
bevy_ecs = { version = "0.13" }
bevy_log = { version = "0.13", optional = true }
bevy_replicon = { version = "0.24" }
bevy_replicon_renet2 = { path = "../bevy_replicon_renet2" }
