[package]
name = "transport"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["log"]
log = ["dep:bevy_log"]
server = ["dep:warp", "dep:fastrand", "dep:tokio"]
client = []
native_transport = ["renet2/native_transport"]
memory_transport = ["renet2/memory_transport"]
web_transport_client = [
    "client",
    "renet2/wt_client_transport",
    "dep:wasm-timer",
]
web_transport_server = ["server", "renet2/wt_server_transport"]
steam_transport = ["dep:renet2_steam", "dep:steamworks"]

[dependencies]
bevy_app = { version = "0.13" }
bevy_ecs = { version = "0.13" }
bevy_log = { version = "0.13", optional = true }
bevy_math = { version = "0.13" }
bevy_renet2 = { git = "https://github.com/UkoeHB/renet2" }
renet2 = { git = "https://github.com/UkoeHB/renet2", default-features = false, features = [
    "bevy",
    "serde",
] }
bevy_replicon = { version = "0.24" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
base64 = { version = "0.22" }
### optional deps
## wasm
# this should only be enabled by `web_transport_client` which should only be run for wasm targets
wasm-timer = { version = "0.2", optional = true }
## server
warp = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1.32", optional = true }
fastrand = { version = "2.0", optional = true }
## steam
renet2_steam = { git = "https://github.com/UkoeHB/renet2", features = [
    "bevy",
], optional = true }
steamworks = { version = "0.11", optional = true }
