[package]
name = "chess_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
games = { path = "../games" }
layouts = { path = "../layouts" }
bevy = { version = "0.12" }
bevy_egui = { version = "0.23" }
egui_extras = { version = "0.23", features = ["svg"] }
itertools = "0.12"

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }
