[package]
name = "chess_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
games = { path = "../games" }
layouts = { path = "../layouts" }
bevy = { version = "0.13" }
bevy_egui = { version = "0.27" }
egui_extras = { version = "0.27", features = ["svg"] }
itertools = "*"

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }
