[package]
name = "chess_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
games = { path = "../games", features = ["log", "reflect"] }
layouts = { path = "../layouts" }
wild_icons = { path = "../icons" }
bevy = { version = "0.13" }
bevy_egui = { version = "0.27" }
egui_extras = { version = "0.27", features = ["svg"] }
itertools = "*"
