[package]
name = "wildchess_app_lib"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chess_gameplay = { path = "../../gameplay" }
chess_boards = { path = "../../boards" }
chess_ui = { path = "../../ui" }
bevy = "0.11"
