[package]
name = "chess_app_lib"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
games = { path = "../../games" }
layouts = { path = "../../layouts" }
chess_ui = { path = "../../ui" }
bevy_egui = { version = "0.23" }
bevy = "0.12"
