[package]
name = "chess_app_wasm"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "chess_app_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
games = { path = "../../games" }
cfg-if = { version = "1.0" }
bevy = { version = "0.13", default-features = false }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
