[package]
name = "chess_app_native"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
games = { workspace = true }
bevy = { workspace = true }
transport = { workspace = true, features = ["client", "native_transport"] }
egui_chessboard = { workspace = true }
