[package]
name = "chess_app_native"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
games = { workspace = true }
egui_chessboard = { workspace = true }
bevy = { workspace = true, features = [
    # default-features excluding audio, vorbis, other unneeded ones
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
