[package]
name = "chess_app_server"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
games = { workspace = true, features = ["log"] }
replication = { workspace = true, features = ["log", "server"] }
transport = { workspace = true, features = [
    # "server",
    # "native_transport",
    # "steam_transport",
    "web_transport_server",
] }
bevy = { workspace = true }
