[package]
name = "chess_app_web"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "chess_app_web"
crate-type = ["cdylib", "rlib"]

[features]
log = ["games/log"]

[dependencies]
games = { workspace = true }
replication = { workspace = true, features = ["client"] }
transport = { workspace = true, features = ["web_transport_client"] }
wild_icons = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_core = { workspace = true }
bevy_time = { workspace = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
# fix a bevy_asset bug by including the required feature
web-sys = { version = "*", features = ["WorkerGlobalScope"] }
