[package]
name = "bevy_replicon_renet2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_renet2 = { workspace = true }
renet2 = { workspace = true }
bevy_replicon = { workspace = true }
