[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
