[package]
name = "egui_chessboard"
version = "0.1.0"
edition = "2021"

[dependencies]
games = { workspace = true, features = ["log", "reflect"] }
layouts = { workspace = true }
wild_icons = { workspace = true }
bevy = { workspace = true }
bevy_egui = { version = "0.28" }
egui_extras = { version = "0.28", features = ["svg"] }
itertools = { workspace = true }
