[package]
name = "games"
version = "0.1.0"
edition = "2021"

[features]
default = []
log = ["dep:bevy_log", "chess/log"]
reflect = ["dep:bevy_reflect", "chess/reflect"]

[dependencies]
chess = { workspace = true, default-features = false }
layouts = { workspace = true }
replication = { workspace = true }
bevy_app = { workspace = true }
bevy_core = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
bevy_time = { workspace = true, features = ["serialize"] }
bevy_replicon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }

[dev-dependencies]
layouts = { path = "../layouts" }
