[package]
name = "games"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { workspace = true }
layouts = { workspace = true }

bevy = { workspace = true }
bevy_replicon = { workspace = true }

serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }

[dev-dependencies]
layouts = { path = "../layouts" }
