[package]
name = "replication"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
log = ["dep:bevy_log"]

[dependencies]
serde = { workspace = true }
bevy_app = { workspace = true }
bevy_core = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true, optional = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet2 = { workspace = true }
